--- a/src/evaluator.html
+++ b/src/evaluator.html
@@ -6,7 +6,7 @@
             "name": {"value":"","required":true},
             "classifier":{"value":"","required":true}
         },
-        icon: "arrow-in.png",
+        icon: "classifier.png",
         inputs: 1,
         outputs: 0,
         align: "right",
