Change classifier alignment

--- a/src/classifier.html
+++ b/src/classifier.html
@@ -9,7 +9,7 @@
         icon: "classifier.png",
         inputs: 1,
         outputs: 1,
-        align: "right",
+        align: "left",
         label: function() {
             return this.name || "bayes classifier node";
         },
